Backend completely in English. Tests in the backend. Code reviewed and improved by Sonar